{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 54,
  "lineage": "51de5aae-fca5-7ce1-8610-58b50a5b860d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:921108067704:vpc/vpc-0fa2bb7e588761a8c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0329dfdafa8c94afd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b0a88b28128dec2b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fa2bb7e588761a8c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-076a7e97205e64157",
            "owner_id": "921108067704"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:loadbalancer/app/nginx-lb/914bbc0eba547858",
            "arn_suffix": "app/nginx-lb/914bbc0eba547858",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-lb-229500424.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:loadbalancer/app/nginx-lb/914bbc0eba547858",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-lb",
            "security_groups": [
              "sg-0f8953c9a1c4a9f7a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0763b949471fd17c4"
              },
              {
                "subnet_id": "subnet-08eabf74a0c2d5400"
              },
              {
                "subnet_id": "subnet-0cff5432d82ebbc5c"
              }
            ],
            "subnets": [
              "subnet-0763b949471fd17c4",
              "subnet-08eabf74a0c2d5400",
              "subnet-0cff5432d82ebbc5c"
            ],
            "vpc_id": "vpc-0fa2bb7e588761a8c",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.nginx_alb_sg",
            "data.aws_subnet_ids.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:listener/app/nginx-lb/914bbc0eba547858/b092717aeb70694e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:targetgroup/nginx-tg/718aea918ed395a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:listener/app/nginx-lb/914bbc0eba547858/b092717aeb70694e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:loadbalancer/app/nginx-lb/914bbc0eba547858",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx_lb",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.nginx_alb_sg",
            "data.aws_subnet_ids.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:targetgroup/nginx-tg/718aea918ed395a8",
            "arn_suffix": "targetgroup/nginx-tg/718aea918ed395a8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:targetgroup/nginx-tg/718aea918ed395a8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0fa2bb7e588761a8c"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:921108067704:security-group/sg-0f8953c9a1c4a9f7a",
            "description": "Security Group for Nginx ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8953c9a1c4a9f7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-alb-sg",
            "name_prefix": "",
            "owner_id": "921108067704",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fa2bb7e588761a8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}